samples/_failures_safe/1761324947_22253a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93a2e4e3.c: In function ‘main’:
./samples/SAFE/__tmp_93a2e4e3.c:142:5: error: expected ‘,’ or ‘;’ at end of input
  142 |     int token_count = tokenize
      |     ^~~
./samples/SAFE/__tmp_93a2e4e3.c:142:5: error: expected declaration or statement at end of input
